# r2-rs

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: basic.rs
src/: client.rs  common.rs  lib.rs  main.rs
